--- a/examples/physics-balls/Cargo.toml
+++ b/examples/physics-balls/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.16.0", default-features = false }
+bevy = { version = "0.16.1", default-features = false }
 bevy-terminal-renderer = { path = "../../" }
-bevy_rapier2d = "0.29.0"
+avian2d = "0.3"
 rand = "0.8.5"
-tracing-appender = "0.2.2"
-tracing-subscriber = "0.3.16"
+
+# For logging
+tracing-appender = "0.2.3"
+tracing-subscriber = "0.3.19"
