--- a/examples/spinning-diamond/Cargo.toml
+++ b/examples/spinning-diamond/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.16.0", default-features = false }
+bevy = { version = "0.16.1", default-features = false }
 bevy-terminal-renderer = { path = "../../" }
+
+# For logging
+tracing-appender = "0.2.3"
+tracing-subscriber = "0.3.19"
